--- a/templates/hostinfo.html
+++ b/templates/hostinfo.html
@@ -176,6 +176,56 @@
                 </div>
                 
         </div>
+        <div class="row">
+            <div class="col-md-12">
+                <!-- BASIC TABLE -->
+                <div class="panel">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Disk information</h3>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table table-striped">
+                            <tbody>
+                                <tr>
+                                    <td>FC_HBA_Info1</td>
+                                    <td>Test Info</td>
+                                </tr>
+                                <tr>
+                                        <td>FC_HBA_Info2</td>
+                                        <td>Test Info</td>
+                                </tr>
+                                <tr>
+                                        <td>FC_HBA_Info3</td>
+                                        <td>Test Info</td>
+                                </tr>
+                                <tr>
+                                        <td>FC_HBA_Info4</td>
+                                        <td>Test Info</td>
+                                </tr>
+                                <tr>
+                                        <td>FC_HBA_Info5</td>
+                                        <td>Test Info</td>
+                                </tr>
+    
+                                <tr>
+                                        <td>FC_HBA_Info6</td>
+                                        <td>Test Info</td>
+                                </tr>
+                                <tr>
+                                        <td>FC_HBA_Info6</td>
+                                        <td>Test Info</td>
+                                </tr>
+    
+    
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <!-- END BASIC TABLE -->
+            </div>
+            
+                
+        </div>
    
    
 </div>
