--- a/templates/hostinfo.html
+++ b/templates/hostinfo.html
@@ -58,7 +58,10 @@
                 <!-- BASIC TABLE -->
                 <div class="panel">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Additional information</h3>
+                        <h3 class="panel-title">Additional Information</h3>
+                        <div class="right">
+                            <button type="button" class="btn-toggle-collapse"><i class="lnr lnr-chevron-up"></i></button>
+                        </div>
                     </div>
                     <div class="panel-body">
                         <table class="table table-striped">
@@ -181,9 +184,12 @@
                 <!-- BASIC TABLE -->
                 <div class="panel">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Disk information</h3>
+                        <h3 class="panel-title">HBA Information</h3>
+                        <div class="right">
+                            <button type="button" class="btn-toggle-collapse"><i class="lnr lnr-chevron-up lnr-chevron-down"></i></button>
+                        </div>
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body" style="display:none;">
                         <table class="table table-striped">
                             <tbody>
                                 <tr>
