--- a/templates/base.html
+++ b/templates/base.html
@@ -66,53 +66,7 @@
 	<script src="/static/vendor/jquery-slimscroll/jquery.slimscroll.min.js"></script>
 	<script src="/static/vendor/jquery/jquery-ui.js"></script>
 	<script src="/static/scripts/klorofil-common.js"></script>
-	<script>
-		$( function() {
-		  var availableHosts = [
-			"host1",
-			"host2",
-			"host3"
-		  ];
-		  function split( val ) {
-			return val.split( /,\s*/ );
-		  }
-		  function extractLast( term ) {
-			return split( term ).pop();
-		  }
-	   
-		  $( "#hostname" )
-			// don't navigate away from the field on tab when selecting an item
-			.on( "keydown", function( event ) {
-			  if ( event.keyCode === $.ui.keyCode.TAB &&
-				  $( this ).autocomplete( "instance" ).menu.active ) {
-				event.preventDefault();
-			  }
-			})
-			.autocomplete({
-			  minLength: 0,
-			  source: function( request, response ) {
-				// delegate back to autocomplete, but extract the last term
-				response( $.ui.autocomplete.filter(
-					availableHosts, extractLast( request.term ) ) );
-			  },
-			  focus: function() {
-				// prevent value inserted on focus
-				return false;
-			  },
-			  select: function( event, ui ) {
-				var terms = split( this.value );
-				// remove the current input
-				terms.pop();
-				// add the selected item
-				terms.push( ui.item.value );
-				// add placeholder to get the comma-and-space at the end
-				terms.push( "" );
-				this.value = terms.join( ", " );
-				return false;
-			  }
-			});
-		} );
-		</script>
+	<script src="/static/scripts/app.js"></script>
 </body>
 
 </html>
