--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,9 @@
 	<!-- GOOGLE FONTS -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
 	<!-- ICONS -->
+	
+ 
+
 	<link rel="apple-touch-icon" sizes="76x76" href="/static/img/apple-icon.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="/static/img/favicon.png">
 </head>
@@ -50,6 +53,7 @@
 			</div>
 			<!-- END MAIN CONTENT -->
 		</div>
+		<div id="editor"></div>
 		<!-- END MAIN -->
 		<div class="clearfix"></div>
 		<footer>
@@ -66,6 +70,11 @@
 	<script src="/static/vendor/jquery-slimscroll/jquery.slimscroll.min.js"></script>
 	<script src="/static/vendor/jquery/jquery-ui.js"></script>
 	<script src="/static/scripts/klorofil-common.js"></script>
+	<script src="/static/scripts/html2pdf.js"></script>
+	<script src="/static/scripts/jspdf.min.js"></script>
+	<script src="/static/scripts/csvExport.min.js"></script>
+
+
 	<script src="/static/scripts/app.js"></script>
 </body>
 
